criando um request personalizado